--- a/C-C-plus-plus-Course-Design-FileManager/C-C-plus-plus-Course-Design-FileManager.vcxproj
+++ b/C-C-plus-plus-Course-Design-FileManager/C-C-plus-plus-Course-Design-FileManager.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
     <ClInclude Include="C-C-plus-plus-Course-Design-FileManager.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="C-C-plus-plus-Course-Design-FileManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
